[gd_scene load_steps=10 format=1]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://UI/Scrap.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Food.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Security.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Oxygen.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Population.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Fuel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/barreavancementvaisseau.png" type="Texture" id=8]
[ext_resource path="res://Sprites/boule-avancement.png" type="Texture" id=9]

[node name="UI" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Resources" type="VBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
custom_constants/separation = 30
alignment = 0

[node name="Scrap" parent="Resources" instance=ExtResource( 2 )]

margin/bottom = 0.0

[node name="Food" parent="Resources" instance=ExtResource( 3 )]

margin/top = 30.0
margin/bottom = 30.0

[node name="Security" parent="Resources" instance=ExtResource( 4 )]

margin/top = 60.0
margin/bottom = 60.0

[node name="Gauges" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 873.0
margin/top = 13.0
margin/right = 1053.0
margin/bottom = 53.0
custom_constants/separation = 50
alignment = 0

[node name="Oxygen" parent="Gauges" instance=ExtResource( 5 )]

margin/right = 0.0

[node name="Population" parent="Gauges" instance=ExtResource( 6 )]

margin/left = 50.0
margin/right = 50.0

[node name="Fuel" parent="Gauges" instance=ExtResource( 7 )]

margin/left = 100.0
margin/right = 100.0

[node name="NextDayButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 913.0
margin/top = 559.0
margin/right = 1010.0
margin/bottom = 579.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Prochain tour"
flat = false

[node name="CrisisPopups" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="TextureProgress" type="TextureProgress" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = null
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="TurnCounter" type="TextureProgress" parent="."]

editor/display_folded = true
rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 205.0
margin/top = 535.0
margin/right = 2392.0
margin/bottom = 669.0
range/min = 0.0
range/max = 12.0
range/step = 1.0
range/page = 0.0
range/value = 12.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 8 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="TextureFrame" type="TextureFrame" parent="TurnCounter"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 9 )
stretch_mode = 0

[node name="DocksIndicativeTexts" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 889.0
margin/top = 477.0
margin/right = 929.0
margin/bottom = 517.0
alignment = 0

[node name="SlumIndicativeTexts" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 920.0
margin/top = 381.0
margin/right = 960.0
margin/bottom = 421.0
alignment = 0

[node name="MarketIndicativeTexts" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 71.0
margin/top = 268.0
margin/right = 115.0
margin/bottom = 308.0
alignment = 0

[node name="EngineIndicativeTexts" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 174.0
margin/top = 101.0
margin/right = 218.0
margin/bottom = 141.0
alignment = 0

[node name="NurseryIndicativeTexts" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 802.0
margin/top = 248.0
margin/right = 846.0
margin/bottom = 288.0
alignment = 0

[node name="EstateIndicativeTexts" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 753.0
margin/top = 114.0
margin/right = 797.0
margin/bottom = 154.0
alignment = 0

[node name="CommandDeckIndicativeTexts" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 606.0
margin/top = 16.0
margin/right = 650.0
margin/bottom = 56.0
alignment = 0

[connection signal="pressed" from="NextDayButton" to="." method="_on_NextDayButton_pressed"]


